Made overall changes to Site for upload
Added Sponsors,Team,Made some css changes to make the site ready for deplyoment

--- a/events.html
+++ b/events.html
@@ -50,7 +50,7 @@
                 <a href="events.html" class="mainmenu__item">Events</a>
                 <a href="team.html" class="mainmenu__item">Our Team</a>
                 <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-                <a href="register.html"class="mainmenu__item">Register</a>
+                <a href="https://goo.gl/forms/QJNkNsDomFfmerUz1" class="mainmenu__item">Register</a>
             </div>
             <p class="label label--topleft label--vert-mirror">HMRITM</p>
             <p class="label label--bottomright label--vert">The Important Stuff</p>
@@ -66,7 +66,7 @@
         <div class="menu__item-inner">
             <div class="sidemenu">
                 <a href="http://www.hmritm.ac.in/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">HMRITM</span></a>
-                <a href="https://www.instagram.com/emblazon_2k18/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
+                <a href="https://www.instagram.com/emblazon19/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
                 <a href="https://www.facebook.com/hmritm.emblazon/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Facebook</span></a>
                 <a href="#" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Youtube</span></a>
 
@@ -77,8 +77,8 @@
         <div class="menu__item-inner">
 
             <p class="label label--topleft label--line">Be a Part now</p>
-            <a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
-            <a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
+            <a href="javascript: void(0)" class="menu__item-link">Day 1 Schedule</a>
+            <a href="javascript: void(0)" class="menu__item-link">Day 2 Schedule</a>
         </div>
 
 
@@ -107,7 +107,7 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/1.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Dance">Dance</span></h3>
-                    <h4 class="box__text"><span class="box__text-inner">Group Dance</span></h4>
+                    <h4 class="box__text"><span class="box__text-inner">Sync</span></h4>
                     <p class="box__content">“The job of feets is walking, but their hobby is dancing.”</p>
                 </div>
             </a>
@@ -115,9 +115,8 @@
                 <div class="box">
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/2.jpg" alt="Battle of Bands"/>
-                    <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Music">Music</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Battle Of Bands</span></h4>
-                    <div class="box__deco box__deco--top">&#10032;</div>
+                    <h3 class="box__title  box__title--bottom"><span class="box__title-inner" data-hover="TIK-TOk">Tik-TOK</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Get Musically</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-3">
@@ -125,7 +124,7 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/3.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Style">Style</span></h3>
-                    <h4 class="box__text box__text--topcloser"><span class="box__text-inner">Fashion Parade</span></h4>
+                    <h4 class="box__text box__text--topcloser"><span class="box__text-inner">Fashion Shuffle</span></h4>
                 </div>
             </a>
 
@@ -133,8 +132,8 @@
                 <div class="box">
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/4.jpg" alt="Some image"/>
-                    <h3 class="box__title"><span class="box__title-inner" data-hover="Duet">Duet</span></h3>
-                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Duet Singing</span></h4>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Voice">Voice</span></h3>
+                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Sync</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-5">
@@ -142,32 +141,32 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/5.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Treasure">Treasure</span></h3>
-                    <h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">Treasure Hunt</span></h4>
+                    <h4 class="box__text box__text--bottom closer"><span class="box__text-inner">Lootere</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-6">
                 <div class="box">
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/6.jpg" alt="Some image"/>
-                    <h3 class="box__title"><span class="box__title-inner" data-hover="Duet">Duet</span></h3>
-                    <h4 class="box__text"><span class="box__text-inner">DUET DANCE</span></h4>
-                    <p class="box__content">"Love stronger, stranger! Love stronger."</p>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Strength">Strength</span></h3>
+                    <h4 class="box__text"><span class="box__text-inner">IRON FIST</span></h4>
+                    <div class="box__deco">💪</div>
                 </div>
             </a>
             <a class="grid__item" href="#preview-7">
                 <div class="box">
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/7.jpg" alt="Some image"/>
-                    <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Debate">Debate</span></h3>
-                    <h4 class="box__text box__title--bottom"><span class="box__text-inner box__text-inner--rotated1">Debate</span></h4>
+                    <h3 class="box__title box__title--straight "><span class="box__title-inner" data-hover="debate">Debate</span></h3>
+                    <h4 class="box__text box__title--bottom"><span class="box__text-inner box__text-inner--rotated1">FLIP FLOP</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-8">
                 <div class="box">
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/8.jpg" alt="Some image"/>
-                    <h3 class="box__title"><span class="box__title-inner" data-hover="Solo">Solo</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Solo Singing</span></h4>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Colour">Colour</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Rangoli</span></h4>
 
                 </div>
             </a>
@@ -176,7 +175,7 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/9.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Idols">Idols</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Mr. & Ms. Emblazon</span></h4>
+                    <h4 class="box__text "><span class="box__text-inner">Mr. & Ms. Emblazon</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-10">
@@ -184,7 +183,7 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/10.jpg" alt="Some image"/>
                     <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                    <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                    <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Alfaaz</span></h4>
                     <p class="box__content">"Call it art or call it freedom."</p>
                 </div>
             </a>
@@ -192,8 +191,8 @@
                 <div class="box">
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/11.jpg" alt="Some image"/>
-                    <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Rap">Rap</span></h3>
-                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Rapping</span></h4>
+                    <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Idols">Idols</span></h3>
+                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Lip Sync Battle</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-12">
@@ -209,7 +208,7 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/13.jpg" alt="Some image"/>
                     <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Quiz">Quiz</span></h3>
-                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Entertainment Quiz</span></h4>
+                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">HeadRush Quiz</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-14">
@@ -232,8 +231,8 @@
                 <div class="box">
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/16.jpg" alt="Some image"/>
-                    <h3 class="box__title"><span class="box__title-inner" data-hover="Fun">Fun</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Musical Chairs</span></h4>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Esports">Esports</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Blue Zone</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-17">
@@ -241,7 +240,7 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/17.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">AD-MAD Show</span></h4>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">AD-Maniac</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-18">
@@ -249,7 +248,7 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/18.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="60sec">60sec</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Minute to Win it</span></h4>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Hour Glass</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-19">
@@ -265,7 +264,7 @@
                     <div class="box__shadow"></div>
                     <img class="box__img" src="images/20.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Art">Art</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Tattoo Making</span></h4>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Shoe Muse</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-21">
