--- a/sponsors.html
+++ b/sponsors.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Emblazon 2019||The Cultural Fest of HMRITM</title>
     <link rel="shortcut icon" href="images/mask_logo.png">
-
-     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" >
      <!-- Animate -->
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
      <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link href="css/index.css" rel="stylesheet">
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <link href="css/materialize.min.css" rel="stylesheet">
+    <link href="css/style1.css" rel="stylesheet">
     <script src="js/snap.svg-min.js"></script>
     <link rel="stylesheet" href="css/sponsors.css">
      <script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this Site in a modern browser for best experience.");</script>
@@ -30,8 +30,15 @@
         <path d="M24 1.485L22.515 0 12 10.515 1.485 0 0 1.485 10.515 12 0 22.515 1.485 24 12 13.484 22.515 24 24 22.515 13.484 12z"/>
     </symbol>
 </svg>
-
-<div class="background"></div>
+  <style>
+      body{
+          background-image:url("images/eback.jpg");
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          -webkit-background-size: cover;
+      }
+  </style>
+<div class="">
 <nav class="menu smenu">
     <div class="menu__item menu__item--1" data-direction="bt">
         <div class="menu__item-inner">
@@ -41,7 +48,7 @@
                 <a href="events.html" class="mainmenu__item">Events</a>
                 <a href="team.html" class="mainmenu__item">Our Team</a>
                 <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-                <a href="register.html" class="mainmenu__item">Register</a>
+                <a href="https://goo.gl/forms/QJNkNsDomFfmerUz1" class="mainmenu__item">Register</a>
             </div>
             <p class="label label--topleft label--vert-mirror">HMRITM</p>
             <p class="label label--bottomright label--vert">The Important Stuff</p>
@@ -57,7 +64,7 @@
         <div class="menu__item-inner">
             <div class="sidemenu">
                 <a href="http://www.hmritm.ac.in/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">HMRITM</span></a>
-                <a href="https://www.instagram.com/emblazon_2k18/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
+                <a href="https://www.instagram.com/emblazon19/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
                 <a href="https://www.facebook.com/hmritm.emblazon/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Facebook</span></a>
                 <a href="#" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Youtube</span></a>
 
@@ -68,8 +75,8 @@
         <div class="menu__item-inner">
 
             <p class="label label--topleft label--line">Be a Part now</p>
-            <a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
-            <a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
+            <a href="javascript: void(0)" class="menu__item-link">Day 1 Schedule</a>
+            <a href="javascript: void(0)" class="menu__item-link">Day 2 Schedule</a>
         </div>
 
 
@@ -85,46 +92,43 @@
     <button class="action action--menu"><svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg></button>
     <button class="action action--close"><svg class="icon icon--close"><use xlink:href="#icon-close"></use></svg></button>
 </nav>
-    <section id="sponsors" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="section-title-header text-center">
-              <h1 class="section-title h1 wow fadeInUp" data-wow-delay="0.2s">Sponsors</h1>
-              <p class="wow h3 fadeInDown" data-wow-delay="0.2s my-1">EMBLAZON 2019</p>
-            </div>
-          </div>
-        </div>
-        <div class="row mb-30 text-center wow fadeInDown my-3 mx-auto p-auto" data-wow-delay="0.3s">
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="./images/logo1.png" alt=""></a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="./images/logo2.png" alt=""></a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="./images/logo3.png" alt=""></a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="./images/logo4.png" alt=""></a>
-            </div>
-          </div>
-          <div class="col-12 text-center">
-            <a href="http://hmritm.ac.in/pdf/Inviting%20Sponsorship%20for%20EMBLAZON%202019.pdf" target="_blank" class="btn btn-default btn-primary btn-group-lg">Become a sponsor</a>
-          </div>
-        </div>
-      </div>
-    </section>
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js"></script>
-</body>
+<center><img class="kong responsive-img " src="images/sponsor.png" width=30% ></center>
+<div style="padding-top: 3%"></div>
+<div class="spo">
+<div class="row">
+    <center>
+        <p  style="font-size:3.4vw;font-family: 'Supermercado One', cursive;"><u class="white">Media Partner</u></p>
+    </center>
+    <div class=" col m4 s6 s6 offset-s3  offset-m4">
+        <a href="https://zebronics.com/"><img class="responsive-img" src="images/spo1.png" height="350" width="350"></a>
+
+    </div>
+</div>
+<div class ="row">
+    <center>
+        <p  style="font-size:3.4vw;font-family: 'Supermercado One', cursive;"><u class="white">Supporting Sponsors</u></p>
+    </center>
+
+    <div class="col m4 s6">
+        <a href="http://aceenggacademy.com/"><img class="responsive-img"  src="images/spo2.jpg" width="350" height="350" ></a>
+    </div>
+    <div class="col m4 s6">
+        <a href="#"><img class="responsive-img"  src="images/spo3.jpg" width="350" height="350" ></a>
+    </div>
+    <div class="col m4 s6">
+        <a  href="http://www.cetpainfotech.com/" > <img  class="responsive-img" src="images/spo4.jpg" width="350" height="350"></a>
+    </div>
+    <div class="col m4 s6">
+        <a href="https://www.allahabadbank.in/english/home.aspx"><img class="responsive-img"  src="images/spo5.jpeg" width="350" height="350" ></a>
+    </div>
+    <div class="col m4 s6">
+        <a  href="https://www.jamboreeindia.com/" > <img  class="responsive-img" src="images/spo6.png" width="350" height="350"></a>
+    </div>
+    <div class="col m4 s6">
+        <a  href="https://www.madeeasy.in/" > <img  class="responsive-img" src="images/spo7.jpg" width="350" height="350"></a>
+    </div>
+</div>
+</div>
 <script src="js/imagesloaded.pkgd.min.js"></script>
 <script src="js/TweenMax.min.js"></script>
 
@@ -132,5 +136,3 @@
     window.scrollTo(0, 0);
 }</script>
 <script src="js/demo.js"></script>
-</html>
-</html>
