--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,7 +41,7 @@
 				<a href="events.html" class="mainmenu__item">Events</a>
 				<a href="team.html" class="mainmenu__item">Our Team</a>
 				<a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-				<a href="register.html"class="mainmenu__item">Register</a>
+				<a href="https://goo.gl/forms/QJNkNsDomFfmerUz1"class="mainmenu__item">Register</a>
 			</div>
 			<p class="label label--topleft label--vert-mirror">HMRITM</p>
 			<p class="label label--bottomright label--vert">The Important Stuff</p>
@@ -57,7 +57,7 @@
 		<div class="menu__item-inner">
 			<div class="sidemenu">
 				<a href="http://www.hmritm.ac.in/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">HMRITM</span></a>
-				<a href="https://www.instagram.com/emblazon_2k18/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
+				<a href="https://www.instagram.com/emblazon19/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
 				<a href="https://www.facebook.com/hmritm.emblazon/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Facebook</span></a>
 				<a href="#" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Youtube</span></a>
 
@@ -68,8 +68,8 @@
 		<div class="menu__item-inner">
 
 			<p class="label label--topleft label--line">Be a Part now</p>
-			<a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
-			<a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
+			<a href="javascript: void(0)" class="menu__item-link">Day 1 Schedule</a>
+			<a href="javascript: void(0)" class="menu__item-link">Day 2 Schedule</a>
 		</div>
 
 
@@ -98,11 +98,343 @@
 							<div class="poster"></div>
 							<div class="info">
 								<header>
+									<h1>Gunjan Madan</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-9711094542">Contact Nubmer:9711094542</a>
+									<br>
+									<br>
+									<a href="mailto:gunjanmadaan06@gmail.com">E-Mail:gunjanmadaan06@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					<!--<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Nishant Gupta</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-8510094400">Contact Nubmer:8510094400</a>
+									<br>
+									<br>
+									<a href="mailto:nishantg2798@gmail.com">E-Mail:nishantg2798@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Harshit Kumar</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-8800408322">Contact Nubmer:8800408322</a>
+									<br>
+									<br>
+									<a href="mailto:harshitkumar250798@gmail.com">E-Mail:harshitkumar250798@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Manu Tyagi</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-7678303457	">Contact Nubmer:7678303457	</a>
+									<br>
+									<br>
+									<a href="mailto:manutyagi016@gmail.com">E-Mail:manutyagi016@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>-->
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Aakash Biswal</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-9958692079">Contact Nubmer:9958692079</a>
+									<br>
+									<br>
+									<a href="mailto:aakashbiswal111@icloud.com
+">E-Mail:aakashbiswal111@icloud.com
+									</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Namrata Mishra</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-8051540758">Contact Nubmer:8051540758</a>
+									<br>
+									<br>
+									<a href="mailto:namratta10@gmail.com">E-Mail:namratta10@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Sanya Swain</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-9873480943	">Contact Nubmer:9873480943	</a>
+									<br>
+									<br>
+									<a href="mailto:sanyaswain16@gmail.com">E-Mail:sanyaswain16@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Tanish Kaushal</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-9811899029	">Contact Nubmer:9811899029	</a>
+									<br>
+									<br>
+									<a href="mailto:kaushal.tanish@gmail.com">E-Mail:kaushal.tanish@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					<!--
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Tushar Ramekar</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-8800408322	">Contact Nubmer:8800408322	</a>
+									<br>
+									<br>
+									<a href="mailto:tusharramekar60@gmail.com">E-Mail:tusharramekar60@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					--><li class="scene">
+					<div class="movie" onclick="return true">
+						<div class="poster"></div>
+						<div class="info">
+							<header>
+								<h1>Sonali Rai</h1>
+								<span class="duration">Core Team</span>
+							</header>
+							<p>
+								<br>Details
+								<br>
+								<br>
+								<a href="tel:+91-8789748696">Contact Nubmer:8789748696</a>
+								<br>
+								<br>
+								<a href="mailto:srai65712@gmail.com">E-Mail:srai65712@gmail.com</a>
+							</p>
+						</div>
+					</div>
+				</li>
+					<li class="scene">
+					<div class="movie" onclick="return true">
+						<div class="poster"></div>
+						<div class="info">
+							<header>
+								<h1>Archee</h1>
+								<span class="duration">Core Team</span>
+							</header>
+							<p>
+								<br>Details
+								<br>
+								<br>
+								<a href="tel:+91-7042419019">Contact Nubmer:7042419019</a>
+								<br>
+								<br>
+								<a href="mailto:archee14041999@gmail.com">E-Mail:archee14041999@gmail.com</a>
+							</p>
+						</div>
+					</div>
+				</li><!--
+					<li class="scene">
+					<div class="movie" onclick="return true">
+						<div class="poster"></div>
+						<div class="info">
+							<header>
+								<h1>Mohit Kalan</h1>
+								<span class="duration">Core Team</span>
+							</header>
+							<p>
+								<br>Details
+								<br>
+								<br>
+								<a href="tel:+91-7065790660">Contact Nubmer:7065790660</a>
+								<br>
+								<br>
+								<a href="mailto:sunnykalan594@gmail.com">E-Mail:sunnykalan594@gmail.com</a>
+							</p>
+						</div>
+					</div>
+				</li>-->
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Manish Paul</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-8447235896	">Contact Nubmer:8447235896	</a>
+									<br>
+									<br>
+									<a href="mailto:manish98paul@gmail.com">E-Mail:manish98paul@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Gagan Abbot</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-9910431743	">Contact Nubmer:9910431743	</a>
+									<br>
+									<br>
+									<a href="mailto:nishantg2798@gmail.com">E-Mail:nishantg2798@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Anshita Bhardwaj</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-8860734484	">Contact Nubmer:8860734484	</a>
+									<br>
+									<br>
+									<a href="mailto:bhardwaj.anshita02@gmail.com
+">E-Mail:bhardwaj.anshita02@gmail.com
+									</a>
+								</p>
+							</div>
+						</div>
+					</li>
+					<!--
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
+									<h1>Aakash Parasher</h1>
+									<span class="duration">Core Team</span>
+								</header>
+								<p>
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-9818918929	">Contact Nubmer:9818918929	</a>
+									<br>
+									<br>
+									<a href="mailto:aakashparashar.2016@gmail.com">E-Mail:aakashparashar.2016@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</li>-->
+					<li class="scene">
+						<div class="movie" onclick="return true">
+							<div class="poster"></div>
+							<div class="info">
+								<header>
 									<h1>Vishesh Mohey</h1>
 									<span class="duration">Web Developer</span>
 								</header>
 								<p>
-									Details
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-8447210452">Contact Nubmer:8447210452</a>
+									<br>
+									<br>
+									<a href="mailto:vishesh9008@gmail.com">E-Mail:vishesh9008@gmail.com</a>
 								</p>
 							</div>
 						</div>
@@ -117,7 +449,13 @@
 									<span class="duration">Web Developer</span>
 								</header>
 								<p>
-									  Details
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-7838573867">Contact Nubmer:7838573867</a>
+									<br>
+									<br>
+									<a href="mailto:rohitpandey357@gmail.com">E-Mail:rohitpandey357@gmail.com</a>
 								</p>
 							</div>
 						</div>
@@ -137,7 +475,13 @@
                                     <span class="duration">Web Developer</span>
                                 </header>
                                 <p>
-                                    Details
+									<br>Details
+									<br>
+									<br>
+									<a href="tel:+91-9818544509">Contact Nubmer:9818544509</a>
+									<br>
+									<br>
+									<a href="mailto:abhi99sindh@gmail.com">E-Mail:abhi99sindh@gmail.com</a>
                                 </p>
 							</div>
 						</div>
