--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link href="css/index.css" rel="stylesheet">
+    <link href="css/vendors.css" rel="stylesheet">
     <script src="js/snap.svg-min.js"></script>
     <script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this Site in a modern browser for best experience.");</script>
 
@@ -30,7 +31,7 @@
     </symbol>
 </svg>
 
-<div class="background"></div>
+<div class=""></div>
 <nav class="menu">
     <div class="menu__item menu__item--1" data-direction="bt">
         <div class="menu__item-inner">
@@ -40,7 +41,7 @@
                 <a href="events.html" class="mainmenu__item">Events</a>
                 <a href="team.html" class="mainmenu__item">Our Team</a>
                 <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-                <a href="register.html"class="mainmenu__item">Register</a>
+                <a href="https://goo.gl/forms/QJNkNsDomFfmerUz1" class="mainmenu__item">Register</a>
             </div>
             <p class="label label--topleft label--vert-mirror">HMRITM</p>
             <p class="label label--bottomright label--vert">The Important Stuff</p>
@@ -56,7 +57,7 @@
         <div class="menu__item-inner">
             <div class="sidemenu">
                 <a href="http://www.hmritm.ac.in/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">HMRITM</span></a>
-                <a href="https://www.instagram.com/emblazon_2k18/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
+                <a href="https://www.instagram.com/emblazon19/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
                 <a href="https://www.facebook.com/hmritm.emblazon/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Facebook</span></a>
                 <a href="#" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Youtube</span></a>
 
@@ -67,8 +68,8 @@
         <div class="menu__item-inner">
 
             <p class="label label--topleft label--line">Be a Part now</p>
-            <a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
-            <a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
+            <a href="javascript: void(0)" class="menu__item-link">Day 1 Schedule</a>
+            <a href="javascript: void(0)" class="menu__item-link">Day 2 Schedule</a>
         </div>
 
 
@@ -85,7 +86,9 @@
     <button class="action action--close"><svg class="icon icon--close"><use xlink:href="#icon-close"></use></svg></button>
 </nav>
 </body>
-<script type="text/javascript" src="js/vendors.js"></script><script type="text/javascript" src="js/index.js"></script></body>
+<script type="text/javascript" src="js/vendors.js"></script>
+<script type="text/javascript" src="js/index.js"></script></body>
+
 <script src="js/imagesloaded.pkgd.min.js"></script>
 <script src="js/TweenMax.min.js"></script>
 
