--- a/schedule2.html
+++ b/schedule2.html
@@ -40,7 +40,7 @@
                 <a href="events.html" class="mainmenu__item">Events</a>
                 <a href="team.html" class="mainmenu__item">Our Team</a>
                 <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-                <a href="register.html" class="mainmenu__item">Register</a>
+                <a href="https://goo.gl/forms/QJNkNsDomFfmerUz1" class="mainmenu__item">Register</a>
             </div>
             <p class="label label--topleft label--vert-mirror">HMRITM</p>
             <p class="label label--bottomright label--vert">The Important Stuff</p>
@@ -56,7 +56,7 @@
         <div class="menu__item-inner">
             <div class="sidemenu">
                 <a href="http://www.hmritm.ac.in/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">HMRITM</span></a>
-                <a href="https://www.instagram.com/emblazon_2k18/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
+                <a href="https://www.instagram.com/emblazon19/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
                 <a href="https://www.facebook.com/hmritm.emblazon/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Facebook</span></a>
                 <a href="#" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Youtube</span></a>
 
@@ -67,8 +67,8 @@
         <div class="menu__item-inner">
 
             <p class="label label--topleft label--line">Be a Part now</p>
-            <a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
-            <a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
+            <a href="javascript: void(0)" class="menu__item-link">Day 1 Schedule</a>
+            <a href="javascript: void(0)" class="menu__item-link">Day 2 Schedule</a>
         </div>
 
 
